# remarkable_client

./: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: arp_table.rs  filesystem.rs  lib.rs  main.rs  remarkable.rs  scan.rs  state.rs
src-tauri/src/remarkable/: filesystem.rs
static/: index.html  main.css  main.js  settings.html  spinner.css
