[package]
name = "app"
version = "0.1.0"
description = "A reMarkable client for accessing your remarkable files locally."
authors = ["Lyr <lyr-7d1h@pm.me>"]
license = "ISC"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["fs-all"] }
tokio = { version = "1.25.0", features = ["full"] }
futures = "0.3.26"
local-ip-address = "0.5.1"
ssh2 = { version="0.9", features=["vendored-openssl"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
